Fixed forbidden APIs and Bugspotter.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/conditional_testing@36831 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c